--- a/src/components/NavItem.astro
+++ b/src/components/NavItem.astro
@@ -26,7 +26,7 @@ const {topic, href} = Astro.props;
         transition: opacity 0.5s cubic-bezier(0.5,1,0.5,1);
         opacity: 0.75;
     }
-    a:is(:hover) {
+    a:is(:hover,:focus-within) {
         background-color: rgb(var(--accent-dark));
         opacity: 1;
     }
