Added new component for dropdown containing all contact links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import NavItem from '../components/NavItem.astro';
+import IconDropdown from "../components/IconDropdown.astro"
 ---
 
 <Layout title="Portfolio - Logan Langdon">
@@ -16,7 +17,7 @@ import NavItem from '../components/NavItem.astro';
 				<NavItem topic="Projects" 	href="#Projects"/>
 				<NavItem topic="Contact" 	href="#Contact"/>
 			</nav>
-			<div> Icons Dropdown </div>
+			<IconDropdown />
 		</nav>
 		<img 	src="../../public/assets/profile.jpg" 
 				id="landing-image"
