--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -28,6 +28,7 @@ const { href, title, body } = Astro.props;
 		background-image: none;
 		background-size: 400%;
 		border-radius: 7px;
+		text-align: center;
 		background-position: 100%;
 		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
 		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
