--- a/src/components/NavItem.astro
+++ b/src/components/NavItem.astro
@@ -15,17 +15,16 @@ const {topic, href} = Astro.props;
     a {
         color: inherit;
         text-decoration: none;
-        /* background-color: rgb(0, 87, 58); */
-        font-size: 1rem;
-        border-radius: 25px;
+        font-size: 2rem;
+        border-radius: 12px;
         text-align: center;
-        flex-basis: 100%;
         flex-wrap: nowrap;
-        /* padding: 0 0.25rem 0 0.25rem; */
+        flex-basis: 10%;
         transition: background-color 0.5s cubic-bezier(0.5,1,0.5,1);
         transition: opacity 0.5s cubic-bezier(0.5,1,0.5,1);
-        opacity: 0.75;
+        opacity: 0.8;
         scroll-behavior: smooth;
+        padding: 1rem 0 0 0;
     }
     a:is(:hover,:focus-within) {
         background-color: rgb(var(--accent-dark));
