--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,9 +16,9 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
+  <body>
 		<slot />
-	</body>
+  </body>
 </html>
 
 <style is:global>
@@ -35,10 +35,12 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif, "Fira Sans";
-		
 		background: #13151a;
 		background-size: 224px;
 	}
+  body {
+    margin: 0;
+  }
 	code {
 		font-family:
 			Menlo,
