--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,45 +6,56 @@ import IconDropdown from "../components/IconDropdown.astro"
 ---
 
 <Layout title="Portfolio - Logan Langdon">
+  <nav class="nav-container">
+    <!-- Include dark mode toggle -->
+      <NavItem topic="Home"      	href="#"/>
+      <NavItem topic="About" 		href="#About"/>
+      <NavItem topic="Skills" 	href="#Skills"/>
+      <NavItem topic="Projects" 	href="#Projects"/>
+      <NavItem topic="Contact" 	href="#Contact"/>
+      <IconDropdown />
+  </nav>
+  <div class="buffer">
+  </div>
 	<main >
-		<nav class="nav-container">
-			<div id="name"> 
-				<a href="" style="text-decoration: none; color: inherit;">
-					Logan Langdon
-				</a> 
-			</div>
-			<!-- Include dark mode toggle -->
-			<nav class="nav-buttons">
-				<NavItem topic="Home"      	href="#"/>
-				<NavItem topic="About" 		href="#About"/>
-				<NavItem topic="Skills" 	href="#Skills"/>
-				<NavItem topic="Projects" 	href="#Projects"/>
-				<NavItem topic="Contact" 	href="#Contact"/>
-			</nav>
-			<IconDropdown />
-		</nav>
-		<img 	src="../../assets/profile.jpg" 
-				id="landing-image"
-				alt="Logan langdon smiling at the camera"
-		/> 
 		<div id="landing-message">
-			<h1 class="landing-text-h1"> Hello there!</h1>
-			<h2 class="landing-text-h2"> My name is Logan.</h2>
+			<h1 class="landing-text-h1"> Logan Langdon</h1>
+			<h2 class="landing-text-h2"> Full-stack Software Developer </h2>
 		</div>
-
 		<div style="scroll-behavior: smooth;">
-			<p id="About" class="section">About
+			<p id="About" class="section">
+				About
 				<div> 
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse placerat aliquet dui sed efficitur. Donec consequat urna eu magna egestas, aliquam molestie ex viverra. Aenean hendrerit eu leo quis rhoncus. Vestibulum lacinia libero nulla, congue ornare odio malesuada tristique. Integer turpis quam, fringilla ut purus eu, tristique posuere nulla. Sed sed ipsum posuere urna aliquet mollis eget a felis. Integer nec sodales dui, eget hendrerit urna. Curabitur venenatis, sapien nec congue blandit, nulla est convallis lectus, ut blandit est enim ut sapien. Pellentesque et urna mi. Aenean non egestas arcu. Vivamus rhoncus ac dui in vehicula. Ut a erat non velit rutrum facilisis. Ut aliquam dictum blandit. Aenean pulvinar leo id leo sagittis pulvinar. Nam a ultrices diam, ac porttitor ligula. Fusce vulputate fermentum enim, ullamcorper blandit elit.
-					Vestibulum pharetra a velit quis faucibus. Donec in nisl tortor. Fusce maximus augue quis mi tincidunt, sit amet mollis arcu maximus. Morbi id ligula vitae eros faucibus ultrices in ut arcu. Suspendisse nec sagittis ligula. Quisque fermentum justo id elit tristique pulvinar. Pellentesque vitae sagittis dui. Cras vitae eros hendrerit, interdum velit nec, vestibulum magna. Fusce sit amet bibendum risus, vel efficitur erat. Donec nec laoreet lorem. Donec convallis lacinia tortor eu euismod.
-					Aenean in posuere urna. In scelerisque, est ac porta rhoncus, purus nulla lacinia quam, non porta purus nibh lacinia enim. Ut aliquam turpis pretium erat vehicula ultrices. Vestibulum bibendum metus sed purus laoreet ornare. Cras vulputate imperdiet nibh, nec mattis lacus condimentum ac. Curabitur rhoncus purus ut velit vulputate, et varius ipsum eleifend. Quisque auctor, magna eu pellentesque posuere, nulla magna vulputate tortor, molestie laoreet dui eros pellentesque neque. Donec ut finibus justo, non pulvinar tortor. Sed sed massa vitae leo fermentum aliquam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis enim diam, tristique non mauris non, venenatis sagittis elit. Fusce ultrices lobortis nibh, in eleifend arcu lacinia sed. Maecenas a nunc vel magna pretium efficitur ut in magna.
+					I am a Software Developer specializing in creating Backend web services.
 				</div>
+					
 			</p>
 			<p id="Skills" class="section">Skills
 				<div> 
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse placerat aliquet dui sed efficitur. Donec consequat urna eu magna egestas, aliquam molestie ex viverra. Aenean hendrerit eu leo quis rhoncus. Vestibulum lacinia libero nulla, congue ornare odio malesuada tristique. Integer turpis quam, fringilla ut purus eu, tristique posuere nulla. Sed sed ipsum posuere urna aliquet mollis eget a felis. Integer nec sodales dui, eget hendrerit urna. Curabitur venenatis, sapien nec congue blandit, nulla est convallis lectus, ut blandit est enim ut sapien. Pellentesque et urna mi. Aenean non egestas arcu. Vivamus rhoncus ac dui in vehicula. Ut a erat non velit rutrum facilisis. Ut aliquam dictum blandit. Aenean pulvinar leo id leo sagittis pulvinar. Nam a ultrices diam, ac porttitor ligula. Fusce vulputate fermentum enim, ullamcorper blandit elit.
-					Vestibulum pharetra a velit quis faucibus. Donec in nisl tortor. Fusce maximus augue quis mi tincidunt, sit amet mollis arcu maximus. Morbi id ligula vitae eros faucibus ultrices in ut arcu. Suspendisse nec sagittis ligula. Quisque fermentum justo id elit tristique pulvinar. Pellentesque vitae sagittis dui. Cras vitae eros hendrerit, interdum velit nec, vestibulum magna. Fusce sit amet bibendum risus, vel efficitur erat. Donec nec laoreet lorem. Donec convallis lacinia tortor eu euismod.
-					Aenean in posuere urna. In scelerisque, est ac porta rhoncus, purus nulla lacinia quam, non porta purus nibh lacinia enim. Ut aliquam turpis pretium erat vehicula ultrices. Vestibulum bibendum metus sed purus laoreet ornare. Cras vulputate imperdiet nibh, nec mattis lacus condimentum ac. Curabitur rhoncus purus ut velit vulputate, et varius ipsum eleifend. Quisque auctor, magna eu pellentesque posuere, nulla magna vulputate tortor, molestie laoreet dui eros pellentesque neque. Donec ut finibus justo, non pulvinar tortor. Sed sed massa vitae leo fermentum aliquam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis enim diam, tristique non mauris non, venenatis sagittis elit. Fusce ultrices lobortis nibh, in eleifend arcu lacinia sed. Maecenas a nunc vel magna pretium efficitur ut in magna.
+					<h1> Backend Frameworks </h1>
+					<ul>
+						<h2> Python <h2>
+						<li>Django</li>
+						<li>FastAPI</li>
+						<li>Flask</li>
+						<h2> Golang <h2>
+						<li>Fiber</li>
+            <li>Chi</li>
+						<li>Standard HTTP Server</li>
+					</ul>
+					<h1> Database Architectures </h1>
+					<ul>
+						<li>PostgreSQL</li>
+						<li>Sqlite</li>
+						<li>Redis</li>
+						<li>DynamoDB</li>
+						<li></li>
+					</ul>
+					<h1> HTML Templating Languages</h1>
+					<ul>
+						<li>Jinja</li>
+						<li>Templ</li>
+					</ul>
 				</div>
 			</p>
 			<p id="Projects" class="section">Projects</p>
@@ -57,7 +68,7 @@ import IconDropdown from "../components/IconDropdown.astro"
 				<Card
 					href="https://docs.astro.build/"
 					title="Project 2"
-					body="Notetaking UI"
+					body="Framework battler"
 				/>
 			</ul>
 			<p id="Contact" class="section">
@@ -69,14 +80,26 @@ import IconDropdown from "../components/IconDropdown.astro"
 				</div>
 			</p>
 		</div>
-
 	</main>
 </Layout>
 
 <style>
+  :root {
+    --landing-h1-final-x: 90%;
+    --landing-h2-final-x: 55%;
+  }
+
 	html, body { 
       scroll-behavior: smooth;
-    }
+  }
+
+  .buffer {
+    position: relative;
+    min-height: 60rem;
+    width: 100%;
+    background-image: linear-gradient(0.50turn,rgb(100,50,50),rgb(50,50,100));
+    opacity: 1;
+  }
 	main {
 		margin: auto;
 		width: 1000px;
@@ -86,16 +109,22 @@ import IconDropdown from "../components/IconDropdown.astro"
 		font-size: 20px;
 		line-height: 1.6;
 		background-color: rgb(21, 21, 21);
-		/*background-color: rgb(255,0,0);*/
 	}
 
 	h1 {
-		font-size: 4rem;
+		font-size: 3rem;
 		font-weight: 700;
 		line-height: 1;
 		text-align: center;
 		margin-bottom: 1em;
 	}
+  h2 {
+		font-size: 2rem;
+		font-weight: 700;
+		line-height: 1;
+		text-align: center;
+		margin-bottom: 1em;
+  }
 
 	.text-gradient {
 		background-image: var(--accent-gradient);
@@ -109,8 +138,9 @@ import IconDropdown from "../components/IconDropdown.astro"
 		margin-bottom: 2rem;
 		border: 1px solid rgba(var(--accent-light), 25%);
 		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
+		padding: 1rem;
 		border-radius: 8px;
+		text-align: center;
 	}
 
 	.section code {
@@ -134,113 +164,65 @@ import IconDropdown from "../components/IconDropdown.astro"
 	}
 
 	.nav-container {
+    position:fixed;
 		display: flex;
 		flex-direction: row nowrap;
 		justify-items: stretch;
 		align-items: stretch;
-		justify-content: space-between;
-		padding: 0 0 3rem 0;
-	}
-
-	.nav-buttons {
-		margin: 0 0 0 18rem;
-		display: flex;
-		flex-direction: row nowrap;
-		width: 25rem;
 		justify-content: center;
-		justify-items: stretch;
-		position: fixed;
-		
-		gap: 0.25rem;
-		background-color: rgb(1, 50, 9);
-		border-radius: 25px;
-		border: 0.15rem solid rgb(var(--accent));
-		padding: 0.25rem;
-		z-index:5;
-		
-		opacity: 0.5; 
-		top: -1rem;
-
-		transition: transform 1s cubic-bezier(0.22,1,0.36,1);
-		/* transition-timing-function: cubic-bezier(0.23, 1, 0.320, 1); */
-
+    width: 100%;
+    height: 4rem;
+		z-index: 1;
+    background-color: rgba(40,200,70,1);
 	}
+
+
 	
-	.nav-buttons:is(:hover,:focus-within) {
-		opacity: 1;
-		transform:translate(0,2rem);
-	}
 	
 
-	@keyframes horizontal-swipe-h1 {
+	@keyframes horizontal-swipe-upper {
 		from {
 			opacity: 0;
-			transform: translateX(-48rem);
+			transform: translateX(-10%);
 		}
 		to {
 			
 			opacity: 1;
-			transform: translateX(-12rem);
+      transform: translateX(var(--landing-h1-final-x));
 		}
 	}
 
-	@keyframes horizontal-swipe-h2 {
+	@keyframes horizontal-swipe-lower {
 		from {
 			opacity: 0;
-			transform: translateX(-28rem);
+			transform: translateX(-10%);
 		}
 		to {
 			
 			opacity: 1;
-			transform: translateX(9rem);
+      transform: translateX(var(--landing-h2-final-x));
 		}
-	}
-
-	@keyframes image-swipe {
-		from {
-			opacity: 0;
-			margin-left: 0;
-		}
-		to {
-			
-			opacity: 1;
-			margin-left:38rem;
-		}
-	}
-
-	#landing-image {
-		position:absolute;
-		margin-left: 38rem;
-		animation-name: image-swipe;
-		animation-duration: 1s;
-		animation-timing-function: cubic-bezier(0.25,1,0.5,1);
-		border-radius: 25px;
-		max-width: 20rem;
-		max-height: 30rem;
 	}
 
 	.landing-text-h1 {
-		transform: translateX(-12rem);
-		animation-name: horizontal-swipe-h1;
+    position: absolute;
+		transform: translateX(var(--landing-h1-final-x));
+    top: 10%;
+		animation-name: horizontal-swipe-upper;
 		animation-duration: 1s;
 		animation-timing-function: cubic-bezier(0.25,1,0.5,1);
 	}
 	
 	.landing-text-h2 {
-		transform: translateX(9rem);
-		animation-name: horizontal-swipe-h2;
+    position: absolute;
+    top: 20%;
+		transform: translateX(var(--landing-h2-final-x));
+		animation-name: horizontal-swipe-lower;
 		animation-duration: 1s;
 		animation-timing-function: cubic-bezier(0.25,1,0.5,1);
 	}
 
-	#landing-message {
-		padding-bottom: 10rem;
-	}
-
-
 	.section-container {
 		scroll-behavior: smooth !important;
 	}
-
-
 </style>
